[gd_scene load_steps=7 format=2]

[ext_resource path="res://TitleScreen/Options.gd" type="Script" id=1]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://TitleScreen/8-bit Arcade In.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://TitleScreen/8-bit Arcade In.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 109.0
margin_top = 42.0
margin_right = 210.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 101.0
margin_bottom = 11.0
custom_colors/font_color_shadow = Color( 0.054902, 0.301961, 0.192157, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 2 )
text = "OPtions"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 101.0
margin_bottom = 32.0
custom_colors/font_color_focus = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Display Mode"
flat = true

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 101.0
margin_bottom = 53.0
custom_colors/font_color_focus = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "VSYNC"
flat = true

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 101.0
margin_bottom = 74.0
custom_colors/font_color_focus = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Audio"
flat = true

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 101.0
margin_bottom = 95.0
custom_colors/font_color_focus = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Back"
flat = true

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
